# ComicFlow

./: .gitignore  README.md  index.html
app/: index.html  main.js
mockups/: README.md  comicflow-fullscreen-reader.html  comicflow-tailwind.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  progress_store.rs  reader.rs  webtoon.rs
